--- a/component/sl_candidate/resources/css/sl_candidate.css
+++ b/component/sl_candidate/resources/css/sl_candidate.css
@@ -887,6 +887,8 @@ div.list_action_container > div > div:first-child
 {
   background: transparent url('/common/pictures/slistem/candi_grade_high_16.png') no-repeat center 5px;
   background: transparent url('/common/pictures/slistem/grade_high_16.png') no-repeat center 5px;
+  -webkit-filter: brightness(110%); /* Chrome, Safari, Opera */
+    filter: brightness(110%)
 }
 .tplCandi_grade_top
 {
