--- a/common/style/login_style.css
+++ b/common/style/login_style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Vibur);
+@import url(https://fonts.googleapis.com/css?family=Vibur);
 * {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
