--- a/common/style/login_style.css
+++ b/common/style/login_style.css
@@ -50,6 +50,7 @@ h1 {
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
+  overflow-y :auto;
 }
 
 .form-group {
