--- a/component/sl_menu/resources/css/sl_menu.css
+++ b/component/sl_menu/resources/css/sl_menu.css
@@ -262,6 +262,7 @@ ul.menuActionShort menu_pipeline
   font-weight: bold;
   color: #2A6991;
   margin: 5px 0;
+  max-height: 100px;
 }
 
 .section_tab div div
