--- a/component/sl_menu/resources/css/sl_menu.css
+++ b/component/sl_menu/resources/css/sl_menu.css
@@ -227,7 +227,7 @@ ul.menuActionShort menu_pipeline
 
 }
 .multiple_tabs{
-  max-height: 150px;
+  max-height: 150px !important;
 }
 
 #tab_list li a.close_tab
