--- a/component/sl_stat/resources/css/totals_chart.css
+++ b/component/sl_stat/resources/css/totals_chart.css
@@ -67,8 +67,8 @@
 }
 .colored_row
 {
-	background-color: #e3e3e3;
-	border-bottom: 1px solid grey;
+	background-color: #cccccc;
+	/*border-bottom: 1px solid grey;*/
 }
 .text_right
 {
