--- a/component/sl_stat/resources/css/totals_chart.css
+++ b/component/sl_stat/resources/css/totals_chart.css
@@ -70,6 +70,11 @@
 	background-color: #cccccc;
 	/*border-bottom: 1px solid grey;*/
 }
+.colored_row2
+{
+	background-color: WhiteSmoke;
+	/*border-bottom: 1px solid grey;*/
+}
 .text_right
 {
 	text-align: right;
