--- a/component/sl_stat/resources/css/totals_chart.css
+++ b/component/sl_stat/resources/css/totals_chart.css
@@ -72,7 +72,7 @@
 }
 .colored_row2
 {
-	background-color: WhiteSmoke;
+	background-color: white;
 	/*border-bottom: 1px solid grey;*/
 }
 .text_right
