--- a/component/sl_stat/resources/css/totals_chart.css
+++ b/component/sl_stat/resources/css/totals_chart.css
@@ -67,7 +67,7 @@
 }
 .colored_row
 {
-	background-color: #cccccc;
+	background-color: #E3E9EF;
 	/*border-bottom: 1px solid grey;*/
 }
 .colored_row2
