--- a/component/sl_stat/resources/css/totals_chart.css
+++ b/component/sl_stat/resources/css/totals_chart.css
@@ -19,6 +19,10 @@
 	/*padding: 0 5px;*/
 	vertical-align: top;
 }
+.totals_table td
+{
+	padding: 0 5px;
+}
 .hover_row:hover
 {
 	/*background-color: #F9E3B3;*/
