--- a/component/sl_menu/resources/css/sl_menu.css
+++ b/component/sl_menu/resources/css/sl_menu.css
@@ -245,7 +245,7 @@ ul.menuActionShort menu_pipeline
 }
 
 .menuActionBloc2{
-  max-height: 275px !important;
+  min-height: 275px !important;
 }
 
 #tab_list li a.close_tab
