--- a/component/sl_menu/resources/css/sl_menu.css
+++ b/component/sl_menu/resources/css/sl_menu.css
@@ -245,7 +245,8 @@ ul.menuActionShort menu_pipeline
 }
 
 .menuActionBloc2{
-  min-height: 275px !important;
+  max-height: 275px !important;
+  overflow-y:auto;
 }
 
 #tab_list li a.close_tab
