--- a/component/sl_menu/resources/css/sl_menu.css
+++ b/component/sl_menu/resources/css/sl_menu.css
@@ -246,7 +246,7 @@ ul.menuActionShort menu_pipeline
 
 .menuActionBloc2{
   max-height: 275px !important;
-  overflow-y:auto;
+  overflow-y:auto !important;
 }
 
 #tab_list li a.close_tab
