--- a/common/style/style.css
+++ b/common/style/style.css
@@ -1270,6 +1270,15 @@ div.mce-flow-layout .mce-path div
   font-size: 11px;
   text-transform: uppercase;
 }
+.spinner_label2
+{
+  background: transparent linear-gradient(to right, #FFF6E5 0%, #FFEFD3 100%) repeat scroll 0% 0%;
+  border: 1px dotted #CFCFCF;
+  border-radius: 3px;
+  text-align: center;
+  font-size: 11px;
+  text-transform: uppercase;
+}
 
 .man,
 .woman
