--- a/common/style/style.css
+++ b/common/style/style.css
@@ -1272,7 +1272,7 @@ div.mce-flow-layout .mce-path div
 }
 .spinner_label2
 {
-  background: transparent linear-gradient(to right, #FFF6E5 0%, #FFEFD3 100%) repeat scroll 0% 0%;
+  /*background: transparent linear-gradient(to right, #FFF6E5 0%, #FFEFD3 100%) repeat scroll 0% 0%;*/
   border: 1px dotted #CFCFCF;
   border-radius: 3px;
   text-align: center;
