--- a/common/lib/bootstrap/css/bootstrap.css
+++ b/common/lib/bootstrap/css/bootstrap.css
@@ -6013,7 +6013,7 @@ button.close {
   white-space: normal;
   filter: alpha(opacity=0);
   opacity: 0;
-  max-width: 100px;
+  max-height: 100px;
 
   line-break: auto;
 }
