--- a/common/style/jquery-ui/jquery-ui.css
+++ b/common/style/jquery-ui/jquery-ui.css
@@ -819,9 +819,10 @@ button.ui-button::-moz-focus-inner {
 	padding: 8px;
 	position: absolute;
 	z-index: 9999;
+	max-width: 300px;
 	-webkit-box-shadow: 0 0 5px #aaa;
 	box-shadow: 0 0 5px #aaa;
-	max-width: 100px;
+	max-height: 100px;
 }
 body .ui-tooltip {
 	border-width: 2px;
