--- a/common/style/jquery-ui/jquery-ui.css
+++ b/common/style/jquery-ui/jquery-ui.css
@@ -822,7 +822,7 @@ button.ui-button::-moz-focus-inner {
 	max-width: 300px;
 	-webkit-box-shadow: 0 0 5px #aaa;
 	box-shadow: 0 0 5px #aaa;
-	max-height: 100px;
+	max-height: 100px !important;
 }
 body .ui-tooltip {
 	border-width: 2px;
